--- a/style.css
+++ b/style.css
@@ -16,20 +16,17 @@ body {
 }
 
 .photo {
-    width: 300px;
-    /* ← tu peux changer cette valeur (200, 250, 300 etc.) */
-    height: 300px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
     overflow: hidden;
-    margin: 20px auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.4);
+    /* Important */
+    margin: 0 auto;
 }
 
-.photo-img {
+.photo img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    /* Remplit le cadre */
 }
