--- a/style.css
+++ b/style.css
@@ -16,17 +16,16 @@ body {
 }
 
 .photo {
-    width: 200px;
-    height: 200px;
+    width: 220px;
+    height: 220px;
     border-radius: 50%;
     overflow: hidden;
-    /* Important */
     margin: 0 auto;
 }
 
 .photo img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    /* Remplit le cadre */
+    width: 100% !important;
+    height: 100% !important;
+    object-fit: cover !important;
+    border-radius: 50% !important;
 }
