--- a/style.css
+++ b/style.css
@@ -31,3 +31,19 @@ body {
     border-radius: 0;
     /* IMPORTANT : enlève le rond */
 }
+
+.photo {
+    width: 220px;
+    height: 260px;
+    overflow: hidden;
+    margin: 0 auto;
+    border-radius: 12px;
+    /* tu peux mettre 0 si tu veux des angles carrés */
+}
+
+.photo-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 0;
+}
