--- a/style.css
+++ b/style.css
@@ -261,7 +261,7 @@ footer {
     text-align: left;
     max-width: 750px;
     margin-left: auto;
-    margin-right: auto;
+    margin-left: auto;
 }
 
 .cv-layout h1 {
